# cpp_base_course

./: README.md
cpp-base-hse-2022/projects/image_processor/: BMP.h  CMakeLists.txt  Image.cpp  Image.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
cpp-base-hse-2022/projects/image_processor/Filters/: Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Filter.cpp  Filter.h  GaussianBlur.cpp  GaussianBlur.h  GrayScale.cpp  GrayScale.h  MatrixFilter.cpp  MatrixFilter.h  Mosaic.cpp  Mosaic.h  Negative.cpp  Negative.h  Relief.cpp  Relief.h  Sharpening.cpp  Sharpening.h
cpp-base-hse-2022/projects/image_processor/tests/: test_building.cpp  test_crop.cpp  test_edge_detection.cpp  test_gaussian_blur.cpp  test_grayscale.cpp  test_image.cpp  test_mosaic.cpp  test_negative.cpp  test_read_write.cpp  test_relief.cpp  test_sharpening.cpp
cpp-base-hse-2022/tasks/admission/: admission.cpp
cpp-base-hse-2022/tasks/associative_operation/: associative_operation.cpp
cpp-base-hse-2022/tasks/cow/: cow_string.cpp  cow_string.h
cpp-base-hse-2022/tasks/mines/: minesweeper.cpp  minesweeper.h
cpp-base-hse-2022/tasks/multiplication/: multiplication.cpp
cpp-base-hse-2022/tasks/palindrome/: palindrome.cpp
cpp-base-hse-2022/tasks/password/: password.cpp
cpp-base-hse-2022/tasks/poly/: poly.cpp  poly.h
cpp-base-hse-2022/tasks/robot/: checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  topology.cpp  topology.h  world.cpp  world.h
(+17 files in other folders)
